--- a/Animated-website/style.css
+++ b/Animated-website/style.css
@@ -1,20 +1,135 @@
 *{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
 }
-.bubble{
-    width: 95%;
+.header-container{
+    width: 100%;
     height: 100vh;
-    background:linear-gradient(to left,rgb(255,204,78),rgb(255,242,205));
-    
+    background-image: url(images/background.png);
+    background-size: cover;
+    background-position: center;
 }
-.sidebar{
-    width: 5%;
+.nav-container{
+    width: 85%;
+    height: 15%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.logo{
+    width: 100px;
+}
+.nav-button{
+    border: 2px #fff solid;
+    padding: 6px 20px 6px 20px;
+    border-radius: 20px;
+    background: transparent;
+}
+.nav-button a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 13px;
+}
+.side-navbar{
+    width: 4%;
     height: 100vh;
-    background-color:rgba(255,242,205,0.7);
+    background:linear-gradient(#00545d, #000729);
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 0%;
+    right: 0%;
 }
+.menu-icon{
+    width: 25px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 70%;
+}
+.social-link img, .info-link img{
+    width: 30px;
+    display: block;
+    margin: 7px auto;
+}
+.social-link {
+    position: absolute;
+    top: 50%;
+    right: 25%;
+    transform: translateY(-50%);
+}
+.info-link{
+ position: absolute;
+ top: 80%;
+ right: 25%;
+}
+.bubble-container img{
+    width: 50px;
+    animation:bubble 7s linear infinite;
+}
+.bubble-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    bottom:0;
+}
+@keyframes bubble{
+   0%{
+    transform: translateY(0);
+    opacity: 0;
+   }
+   20%{
+   
+    opacity: 1;
+   }
+   35%{
+   
+    opacity: 1;
+   }
+   45%{
+   
+    opacity: 1;
+   }
+   65%{
+   
+    opacity: 1;
+   }
+   100%{
+   transform: translateY(-80vh);
+    opacity: 0;
+   }
+}
+.bubble-container img:nth-child(1){
+    animation-delay: 1s;
+    width: 25px;
+}
+.bubble-container img:nth-child(2){
+    animation-delay: 3.9s;
+    width: 35px;
+}
+.bubble-container img:nth-child(3){
+    animation-delay: 2.3s;
+    width: 45px;
+}
+.bubble-container img:nth-child(4){
+    animation-delay: 6s;
+    width: 25px;
+}
+.bubble-container img:nth-child(5){
+    animation-delay: 2.6s;
+}
+.bubble-container img:nth-child(6){
+    animation-delay: 5.1s;
+    width: 45px;
+}
+.bubble-container img:nth-child(7){
+    animation-delay: 7s;
+    margin-right: 115px;
+    width: 15px;
+}
+
+
